Table REACTOR_LOCATIONS {
  id INTEGER [pk, increment]
  reactor_location TEXT
}

Table EPOCHS {
  id INTEGER [pk, increment]
  epoch TEXT
}

Table REACTOR_DESIGN {
  id INTEGER [pk, increment]
  reactor_power INTEGER
  reactor_type TEXT
}

Table PLANTS {
  id INTEGER [pk, increment]
  plant_name TEXT
  reactor_location_id INTEGER
}

Table FUEL_ASSEMBLY {
  id INTEGER [pk, increment]
  FA_name TEXT
  FA_mass REAL
  FA_length_ft INTEGER
  FA_manufacturing_year INTEGER
  FA_BUp REAL
  reactor_design_id INTEGER
  plant_id INTEGER
  epoch_id INTEGER
  introduction_year INTEGER
}

Ref: PLANTS.reactor_location_id > REACTOR_LOCATIONS.id
Ref: FUEL_ASSEMBLY.reactor_design_id > REACTOR_DESIGN.id
Ref: FUEL_ASSEMBLY.plant_id > PLANTS.id
Ref: FUEL_ASSEMBLY.epoch_id > EPOCHS.id
